--- a/eTools Ultimate/Views/Pages/MotionsPage.xaml
+++ b/eTools Ultimate/Views/Pages/MotionsPage.xaml
@@ -342,6 +342,36 @@
                         ItemsSource="{Binding MotionsView}"
                         SelectionChanged="MotionsListView_SelectionChanged"
                         SelectionMode="Single">
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="{i18n:StringLocalizer 'Copy'}">
+                                    <MenuItem
+                                        Command="{Binding CopyIdentifierCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy identifier'}" />
+                                    <MenuItem
+                                        Command="{Binding CopyIdCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy ID'}" />
+                                    <MenuItem
+                                        Command="{Binding CopyNameIdentifierCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy name identifier'}" />
+                                    <MenuItem
+                                        Command="{Binding CopyNameCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy name'}" />
+                                    <MenuItem
+                                        Command="{Binding CopyDescriptionIdentifierCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy description identifier'}" />
+                                    <MenuItem
+                                        Command="{Binding CopyDescriptionCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ContextMenu}, Path=PlacementTarget.SelectedItem}"
+                                        Header="{i18n:StringLocalizer 'Copy description'}" />
+                                </MenuItem>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="Background" Value="Transparent" />
