--- a/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
@@ -42,6 +42,36 @@
                             <TextBlock Text="{Binding ItemKind3Identifier}" />
                         </StackPanel>
                     </HierarchicalDataTemplate>
+                    <DataTemplate DataType="{x:Type models:DropGold}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Border
+                                Width="32"
+                                Height="32"
+                                Margin="0,0,8,0"
+                                Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                                BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                                BorderThickness="1">
+                                <Image
+                                    Margin="2"
+                                    Source="{Binding Item.Icon}"
+                                    Stretch="Uniform" />
+                            </Border>
+                            <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                <TextBlock
+                                    FontWeight="SemiBold"
+                                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                    Text="{Binding Item.Name}" />
+                                <TextBlock
+                                    FontSize="12"
+                                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                    Text="{Binding Item.Identifier}" />
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
                     <DataTemplate DataType="{x:Type models:DropItem}">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -105,61 +135,162 @@
                 </TreeView.Resources>
             </TreeView>
         </Border>
-        <UniformGrid
-            Grid.Column="1"
-            Width="400"
-            VerticalAlignment="Top"
-            Columns="2">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item'}" />
-                <ui:AutoSuggestBox
-                    Grid.Row="1"
-                    Margin="0,5,0,0"
-                    DisplayMemberPath="Value"
-                    OriginalItemsSource="{Binding ItemIdentifiers, Mode=OneWay}"
-                    Text="{Binding SelectedItem.Item.Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ElementName=DropListTreeView}" />
-            </Grid>
-            <Grid Margin="15,0,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Quantity'}" />
-                <ui:NumberBox
-                    Grid.Row="1"
-                    Margin="0,5,0,0"
-                    ClearButtonEnabled="False"
-                    Value="{Binding SelectedItem.Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=DropListTreeView}" />
-            </Grid>
-            <Grid Margin="0,10,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Level'}" />
-                <ui:NumberBox
-                    Grid.Row="1"
-                    Margin="0,5,0,0"
-                    ClearButtonEnabled="False"
-                    Cursor="Arrow"
-                    Value="{Binding SelectedItem.Prop.DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=DropListTreeView}" />
-            </Grid>
-            <Grid Margin="15,10,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Probability'}" />
-                <ui:NumberBox
-                    Grid.Row="1"
-                    Margin="0,5,0,0"
-                    ClearButtonEnabled="False"
-                    Value="{Binding SelectedItem.ProbabilityPercent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=DropListTreeView}" />
-            </Grid>
-        </UniformGrid>
+        <StackPanel Grid.Column="2" Width="200">
+            <ContentControl Content="{Binding SelectedItem, ElementName=DropListTreeView}">
+                <ContentControl.Resources>
+                    <DataTemplate DataType="{x:Type models:DropGold}">
+                        <UniformGrid VerticalAlignment="Top" Columns="1">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Minimum'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    Value="{Binding Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Maximum'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    Value="{Binding Prop.DwNumber2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </UniformGrid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type models:DropItem}">
+                        <UniformGrid VerticalAlignment="Top" Columns="1">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Item'}" />
+                                <ui:AutoSuggestBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    DisplayMemberPath="Value"
+                                    OriginalItemsSource="{Binding DataContext.ItemIdentifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=ui:ContentDialog}}"
+                                    Text="{Binding ItemIdentifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Quantity'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    ClearButtonEnabled="False"
+                                    Value="{Binding Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Level'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    ClearButtonEnabled="False"
+                                    Cursor="Arrow"
+                                    Value="{Binding Prop.DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Probability'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    ClearButtonEnabled="False"
+                                    Value="{Binding ProbabilityPercent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </UniformGrid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type models:DropKind}">
+                        <UniformGrid Columns="1">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Category'}" />
+                                <ui:AutoSuggestBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    DisplayMemberPath="Value"
+                                    OriginalItemsSource="{Binding DataContext.ItemKind3Identifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=ui:ContentDialog}}"
+                                    Text="{Binding ItemKind3Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Minimum rarity'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    IsEnabled="False"
+                                    Value="{Binding MinUnique, Mode=OneWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Maximum rarity'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    IsEnabled="False"
+                                    Value="{Binding MaxUnique, Mode=OneWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                        </UniformGrid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type models:Item}">
+                        <UniformGrid Columns="1">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Category'}" />
+                                <ui:AutoSuggestBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    DisplayMemberPath="Value"
+                                    IsEnabled="False"
+                                    OriginalItemsSource="{Binding DataContext.ItemKind3Identifiers, Mode=OneWay, RelativeSource={RelativeSource AncestorType=ui:ContentDialog}}"
+                                    Text="{Binding ItemKind3Identifier, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                            <Grid Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Rarity'}" />
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    Margin="0,5,0,0"
+                                    IsEnabled="False"
+                                    Value="{Binding Prop.DwItemRare, Mode=OneWay, UpdateSourceTrigger=LostFocus}" />
+                            </Grid>
+                        </UniformGrid>
+                    </DataTemplate>
+                </ContentControl.Resources>
+            </ContentControl>
+        </StackPanel>
     </Grid>
 </ui:ContentDialog>
