--- a/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
@@ -149,6 +149,7 @@
                                 <ui:NumberBox
                                     Grid.Row="1"
                                     Margin="0,5,0,0"
+                                    ClearButtonEnabled="False"
                                     Value="{Binding Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
                             <Grid Margin="0,10,0,0">
@@ -160,6 +161,7 @@
                                 <ui:NumberBox
                                     Grid.Row="1"
                                     Margin="0,5,0,0"
+                                    ClearButtonEnabled="False"
                                     Value="{Binding Prop.DwNumber2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
                         </UniformGrid>
@@ -209,11 +211,15 @@
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
-                                <TextBlock Grid.Row="0" Text="{i18n:StringLocalizer 'Probability'}" />
+                                <TextBlock Grid.Row="0">
+                                    <Run Text="{i18n:StringLocalizer 'Probability'}" />
+                                    <Run Text="(%)" />
+                                </TextBlock>
                                 <ui:NumberBox
                                     Grid.Row="1"
                                     Margin="0,5,0,0"
                                     ClearButtonEnabled="False"
+                                    MaxDecimalPlaces="8"
                                     Value="{Binding ProbabilityPercent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
                         </UniformGrid>
