--- a/eTools Ultimate/Views/Pages/MoversPage.xaml
+++ b/eTools Ultimate/Views/Pages/MoversPage.xaml
@@ -1787,7 +1787,7 @@
                                                 <ui:AutoSuggestBox
                                                     Grid.Column="0"
                                                     OriginalItemsSource="{Binding ModelMotionFilePossibilities, Mode=OneWay}"
-                                                    Text="{Binding Path=SelectedItem.Prop.SzMotion, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=MotionsListView}">
+                                                    Text="{Binding Path=SelectedItem.SzMotion, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=MotionsListView}">
                                                     <ui:AutoSuggestBox.Style>
                                                         <Style BasedOn="{StaticResource {x:Type ui:AutoSuggestBox}}" TargetType="ui:AutoSuggestBox">
                                                             <Style.Triggers>
@@ -1846,7 +1846,7 @@
                                             <ui:AutoSuggestBox
                                                 Grid.Column="0"
                                                 OriginalItemsSource="{Binding ModelFilePossibilities, Mode=OneWay}"
-                                                Text="{Binding MoversView.CurrentItem.Model.Prop.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                                Text="{Binding MoversView.CurrentItem.Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                             <ui:Button
                                                 Grid.Column="1"
                                                 Width="30"
@@ -1874,7 +1874,7 @@
                                         <ui:NumberBox
                                             Grid.Row="1"
                                             SpinButtonPlacementMode="Inline"
-                                            Value="{Binding MoversView.CurrentItem.Model.Prop.FScale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                            Value="{Binding MoversView.CurrentItem.Model.FScale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                     </Grid>
                                 </UniformGrid>
 
@@ -1897,7 +1897,7 @@
                                         <ComboBox
                                             Grid.Row="1"
                                             ItemsSource="{Binding ModelTexturesPossibilities}"
-                                            SelectedValue="{Binding MoversView.CurrentItem.Model.Prop.NTextureEx, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                            SelectedValue="{Binding MoversView.CurrentItem.Model.NTextureEx, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                             Style="{StaticResource AppComboBoxStyle}" />
                                     </Grid>
                                 </UniformGrid>
